src/test/resources/semantic/reject/assignmentFromUndeclaredArray.ul
void main() {
}

void foo() {
    int[5] foo;
    foo = bar;
}
